# Systolic-Array-NPU-CE-4302

./: .gitignore  README.md  cat.mif  clkdiv.sv  fpga_bytes.sv  gcontroller.sv  img.raw  jtag_top.sv  leaky_relu.sv  leaky_relu_tb.sv  mac.sv  mac_tb.sv  matrix_normalization.sv  matrix_normalization_tb.sv  msim_transcript  npu.sv  npu_tb.sv  npu_top_module.sv  paintscreen.sv  pe.sv  pe_t.sv  pe_tb.sv  ram.v  ram_bb.v  ram_tb.sv  ram_top_module.sv  rom.v  rom_bb.v  systolic_array.sv  systolic_array_tb.sv  systolic_array_tb2.sv  systolic_array_tb3.sv  systolic_npu.qpf  systolic_npu.qsf  systolic_npu.qsys  systolic_npu.qws  systolic_npu_run_msim_rtl_verilog.do  systolic_npu_run_msim_rtl_verilog.do.bak1  systolic_npu_run_msim_rtl_verilog.do.bak2  u_vjtag.sopcinfo  (+4 more)
.qsys_edit/: preferences.xml
Conversion-Tools/: duplicate.py  image_to_raw.py
Prototype-Testing/: CMakeLists.txt  generator.py  image3.jpg!d  image4.jfif  npu.py  sample.py
Prototype-Testing/include/: PE.h
Prototype-Testing/src/: PE.cpp  SystolicArray.cpp
greybox_tmp/: cbx_args.txt
rtl_work/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qpg  _lib1_0.qtl
systolic_npu/: systolic_npu.bsf  systolic_npu.cmp  systolic_npu.csv  systolic_npu.spd  systolic_npu_bb.v  systolic_npu_inst.v  systolic_npu_inst.vhd
u_vjtag/: u_vjtag.bsf  u_vjtag.csv  u_vjtag.html
verilog_libs/altera_lnsim_ver/: _info  _lib.qdb  _lib1_2.qtl
verilog_libs/altera_mf_ver/: _info  _lib.qdb  _lib1_2.qtl
verilog_libs/altera_ver/: _info  _lib.qdb  _lib1_2.qtl
verilog_libs/cyclonev_hssi_ver/: _info  _lib.qdb  _lib1_3.qtl
(+14 files in other folders)
